src/ui/snapshots/ppoker__ui__voting__tests__After restart.snap
---
source: src/ui/voting.rs
assertion_line: 834
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote───────────────╮                                      "
"│Name   Vote   ││                        │                                      "
"│              ││                        │                                      "
"│test   -      ││                        │                                      "
"│              ││        ██████          │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              │╰────────────────────────╯                                      "
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Server]: test played a card                                  │"
"│              ││[Server]: test revealed all cards                             │"
"│              ││[Server]: test started a new round                            │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"                                                                                "
" Vote | Reveal | History | Name change | Chat | Quit                            "
"                                                                                "
