src/ui/snapshots/ppoker__ui__voting__tests__After reveal with spectator.snap
---
source: src/ui/voting.rs
assertion_line: 941
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Waiting |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote──────────╮╭Vote distribution───╮╭Average vote───────╮"
"│Name   Vote   ││      ████         ││         ██         ││ ████            ██│"
"│              ││     ██  ██        ││         ██         ││██  ██          ██ │"
"│test   3      ││         ██        ││         ██         ││    ██          ██ │"
"│              ││       ███         ││         ██         ││  ███           ██ │"
"│              ││         ██        ││         ██         ││    ██          ███│"
"│              ││     ██  ██        ││         ██         ││██  ██    ██    ███│"
"│              ││      ████         ││         3█         ││ ████     ██     ██│"
"│              │╰───────────────────╯╰────────────────────╯╰───────────────────╯"
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Client]: Your vote is the last one missing.                  │"
"│              ││[Server]: test joined the room                                │"
"╰──────────────╯│[Server]: viewer joined as spectator                          │"
"╭Spectators────╮│[Server]: test played a card                                  │"
"│Name          ││[Server]: test revealed all cards                             │"
"│              ││                                                              │"
"│viewer        ││                                                              │"
"│              ││                                                              │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"                                                                                "
" Restart | History | Name change | Chat | Quit                                  "
"                                                                                "
