src/ui/snapshots/ppoker__ui__voting__tests__After sending chat.snap
---
source: src/ui/voting.rs
assertion_line: 970
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote───────────────╮                                      "
"│Name   Vote   ││                        │                                      "
"│              ││                        │                                      "
"│test   -      ││                        │                                      "
"│              ││        ██████          │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              │╰────────────────────────╯                                      "
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Server]: test joined the room                                │"
"│              ││[Server]: test: Hello!                                        │"
"│              ││                                                              │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"                                                                                "
" Vote | Reveal | History | Name change | Chat | Quit                            "
"                                                                                "
