src/ui/snapshots/ppoker__ui__voting__tests__Restart pending.snap
---
source: src/ui/voting.rs
assertion_line: 826
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Waiting |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote──────────╮╭Vote distribution───╮╭Average vote───────╮"
"│Name   Vote   ││     ██████        ││            ██      ││██████           ██│"
"│              ││     ██            ││            ██      ││██              ██ │"
"│test   5      ││     █████         ││            ██      ││█████           ██ │"
"│              ││         ██        ││            ██      ││    ██          ██ │"
"│              ││         ██        ││            ██      ││    ██          ███│"
"│              ││     ██  ██        ││            ██      ││██  ██    ██    ███│"
"│              ││      ████         ││            5█      ││ ████     ██     ██│"
"│              │╰───────────────────╯╰────────────────────╯╰───────────────────╯"
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Server]: test joined the room                                │"
"│              ││[Server]: test played a card                                  │"
"│              ││[Server]: test revealed all cards                             │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"╭─────────────────────────────────Confirmation─────────────────────────────────╮"
"│                 Confirm you want to start a new round? Yes/No                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
